--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,6 +24,17 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: v1.4.6
+          
+        
+      - name: Configure AWS CLI
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set region us-east-1
+      # Other steps in your workflow...
+
+
+
 
       - name: Terraform Init
         run: terraform init
