--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,11 +28,11 @@ jobs:
           terraform_version: v1.4.6
           
         
-#       - name: Configure AWS CLI
-#         run: |
-#           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws configure set region us-east-1
+      - name: Configure AWS CLI
+        run: |
+           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws configure set region us-east-1
       # Other steps in your workflow...
 
       - name: Terraform Init
