--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,14 +21,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-                    cli_confi_crenditials_token: ${{secrets.TF_API_TOKEN}}
-
-          
-          
-        
+     # - name: Setup Terraform
+     #   uses: hashicorp/setup-terraform@v1
+      #  with:
+                 
 #       - name: Configure AWS CLI
 #         run: |
 #            aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -37,7 +33,7 @@ jobs:
 #       # Other steps in your workflow...
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -backend-config="credentials_token=${{secrets.TF_API_TOKEN}}
 
       - name: Terraform Validate
         run: terraform validate
