--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,7 +33,7 @@ jobs:
 #       # Other steps in your workflow...
 
       - name: Terraform Init
-        run: terraform init -backend-config="credentials_token=${{secrets.TF_API_TOKEN}}
+        run: terraform init -backend-config="credentials_token=${{secrets.TF_API_TOKEN}} -debug
 
       - name: Terraform Validate
         run: terraform validate
