--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform Init
-        run: terraform init -backend-config="credentials_token=${{secrets.TF_API_TOKEN}} -debug
+        run: terraform init -var-file vars.tfvars -out=tfplan
 
       - name: Terraform Validate
         run: terraform validate
