--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terraform Init
-        run: terraform init -var-file vars.tfvars -out=tfplan
+        run: terraform init 
 
       - name: Terraform Validate
         run: terraform validate
