--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,4 +32,4 @@ jobs:
         run: terraform plan  -var-file vars.tfvars -out=tfplan
 
       - name: Terraform Apply
-        run: terraform apply  -var-file vars.tfvars -auto-approve tfplan
+        run: terraform apply  -var-file vars.tfvars -auto-approve
