--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,8 +12,8 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
   AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+  SET AWS_DEFAULT_REGION=us-east-1
 
-  aws-region: ap-south-1
 jobs:
   terraform:
     runs-on: ubuntu-latest
